feat(vivid templates): add login template (#1057)
* feat(vwc-side-drawer): 1st draft

* story added

* story added

* semi-transparent content model

* alternate scheme

* alternate

* devider check

* working example

* this will break

* this will not break

* slot="navigation"

* margin list

* side drawer bigger inline size

* side drawer position

* appContent inlined

* documentation, header, image

* vvd-umbrella under devDependencies

* @prop

* readme

* Update package.json

* Update package.json

* Update package.json

* Update package.json

* Update package.json

* add border and shadow to side drawer

* activated

* style

* Extension panel should not be activated

* wider side drawer

* slots documentation

* restore yarn.lock

* refer correct tokens

* refactor

* declartiveness

* correct module import

* ESlint

* refactor names

* update readme

* login template

* forgot password

* margin text

* lint

* remove css

* vwc-inline.sign-in-helper align-items

* 24 px gap

* add css properties to side drawer

* split stories

* default vars

* figure

* section

* section

* css vars

* css vars

* background color

* background-color

* default vars

* change cssprop default description

* use vwc-inline

* add grid-template-rows support

* remove inline-template from grid-template-rows

* InlineTemplate

* add tests

* add ui test

* lint

* firefox test fix

* firefox fix

* ui test

* ui test

* remove unnecessary

* remove unnecessary

* Add size = Block

* ui test

* login

* login

* login

* min-inline-size

* remove unnecessary

* add spacing sizes

* define props

* lit specifics

* renaming

* columnBasis

* attribute fix

* Update common/foundation/src/constants.ts

Co-authored-by: yinon <yinon@hotmail.com>

* fix ui test

* add x_small size

* .

* add margin

* a

--- a/components/layout/src/vwc-layout.scss
+++ b/components/layout/src/vwc-layout.scss
@@ -1,58 +1,37 @@
 @use 'sass:map';
 
-$items-min-inline-size-v-name: --items-min-inline-size;
-$items-spacing-v-name: --items-spacing;
-$gutters-v-name: --gutters;
-$auto-sizing: --auto-sizing;
-
-/* #region SIZE */
-$items-min-inline-sizes: (
-	sm: 10rem,
-	md: 20rem,
-	lg: 30rem,
-);
-
-/* #region SPACEING */
-$items-spacings: (
-	xs: 16px,
-	md: 24px,
-	xl: 32px,
-);
-
-@each $key, $value in $items-min-inline-sizes {
-	.layout-column-basis-#{$key} {
-		#{$items-min-inline-size-v-name}: $value;
-	}
-}
-
-@each $key, $value in $items-spacings {
-	.layout-column-spacing-#{$key} {
-		#{$items-spacing-v-name}: $value;
-	}
-	.layout-gutters-#{$key} {
-		#{$gutters-v-name}: $value;
-	}
-}
+@use 'partials/vwc-layout-variables' as variables;
+@use 'partials/vwc-layout-mixins' as mixins;
+@use 'partials/vwc-layout-functions' as functions;
 
 .layout {
 	display: grid;
-	margin: var(#{$gutters-v-name}, 0);
-	gap: var(#{$items-spacing-v-name}, #{map.get($items-spacings, md)});
 	grid-auto-rows: min-content;
-	grid-template-columns: repeat(
-		var(#{$auto-sizing}),
-		minmax(var(#{$items-min-inline-size-v-name}, #{map.get($items-min-inline-sizes, lg)}), 1fr)
-	);
 
-	&:not(.layout-auto-sizing-fill),
-	&.layout-auto-sizing-fit {
-		#{$auto-sizing}: auto-fit;
-	}
-	&.layout-auto-sizing-fill {
-		#{$auto-sizing}: auto-fill;
+	@include mixins.measurement(map.keys(variables.$bases)...) using ($basis) {
+		#{functions.get-selector-with-default(".layout-column-basis", $basis, md, map.keys(variables.$bases))} {
+			grid-template-columns: repeat(
+				var(#{variables.$layout-auto-sizing}),
+				minmax(map.get(variables.$bases, $basis), 1fr)
+			);
+		}
 	}
 
-	&.layout-column-basis-block {
-		grid-template-columns: 1fr;
+	@include mixins.measurement(map.keys(variables.$spaces)...) using ($space) {
+		#{functions.get-selector-with-default(".layout-column-spacing", $space, md, map.keys(variables.$spaces))} {
+			gap: map.get(variables.$spaces, $space);
+		}
+	}
+
+	@include mixins.measurement(map.keys(variables.$spaces)...) using ($space) {
+		&.layout-gutters-#{$space} {
+			margin: map.get(variables.$spaces, $space);
+		}
+	}
+
+	@include mixins.measurement(map.keys(variables.$auto-sizes)...) using ($size) {
+		#{functions.get-selector-with-default(".layout-auto-sizing", $size, fit, map.keys(variables.$auto-sizes))} {
+			#{variables.$layout-auto-sizing}: map.get(variables.$auto-sizes, $size);
+		}
 	}
 }
