Use the new elevation tokens

--- a/components/top-app-bar/src/vwc-top-app-bar.scss
+++ b/components/top-app-bar/src/vwc-top-app-bar.scss
@@ -9,5 +9,6 @@
 }
 .mdc-top-app-bar--fixed {
 	// TODO when ready - @include from mixin or avoid magic string and refer to sass variable
-	--mdc-top-app-bar-fixed-box-shadow: var(--vvd-scheme-elevation-dp-4-box-shadow);
+	--mdc-top-app-bar-fixed-box-shadow: 0;
+	filter: var(--vvd-elevation-shadow-dp-4-filter);
 }
