--- a/components/elevation/src/vwc-elevation.scss
+++ b/components/elevation/src/vwc-elevation.scss
@@ -20,8 +20,8 @@ $vvd-elevation-border-radius: --vvd-elevation-border-radius;
 
 @each $dp in $dps {
 	#{get-default-selector($dps, $dp)} {
-		background-color: var(#{$vvd-elevation-background-color}, var(--vvd-scheme-elevation-dp-#{$dp}-canvas));
-		box-shadow: var(--vvd-scheme-elevation-dp-#{$dp}-box-shadow);
+		background-color: var(#{$vvd-elevation-background-color}, var(--vvd-elevation-color-dp-#{$dp}-canvas));
+		filter: var(--vvd-elevation-shadow-dp-#{$dp}-filter);
 	}
 }
 
