--- a/components/top-app-bar/src/vwc-top-app-bar.scss
+++ b/components/top-app-bar/src/vwc-top-app-bar.scss
@@ -9,6 +9,6 @@
 }
 .mdc-top-app-bar--fixed {
 	// TODO when ready - @include from mixin or avoid magic string and refer to sass variable
-	--mdc-top-app-bar-fixed-box-shadow: 0;
+	box-shadow: unset;
 	filter: var(--vvd-shadow-surface-4dp);
 }
