--- a/components/top-app-bar/src/vwc-top-app-bar.scss
+++ b/components/top-app-bar/src/vwc-top-app-bar.scss
@@ -8,7 +8,10 @@
 	@include typography.typography-mdc-coupling('headline6', 'subtitle-2');
 }
 .mdc-top-app-bar--fixed {
-	// TODO when ready - @include from mixin or avoid magic string and refer to sass variable
 	box-shadow: unset;
+}
+
+.mdc-top-app-bar--fixed-scrolled {
+	transition: filter 200ms linear 0s;
 	filter: var(--vvd-shadow-surface-4dp);
 }
