feat(calendar): support time format hour12

--- a/components/calendar/src/vwc-calendar-event.scss
+++ b/components/calendar/src/vwc-calendar-event.scss
@@ -36,7 +36,7 @@ section {
 	max-block-size: calc(100% - #{$top} - #{$margin-block * 2});
 	&:focus {
 		z-index: 2000;
-		box-shadow: 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%), 0 3px 5px -1px rgb(0 0 0 / 20%);
+		filter: var(#{scheme-variables.$vvd-shadow-surface-8dp});
 		outline: none;
 	}
 }
