chore(layout): expose grid-template-column variable

--- a/components/layout/src/partials/_vwc-layout-variables.scss
+++ b/components/layout/src/partials/_vwc-layout-variables.scss
@@ -1,4 +1,5 @@
-$layout-auto-sizing: --layout-auto-sizing;
+$layout-auto-sizing: --layout-auto-sizing; // interior. not API
+$layout-grid-template-columns: --layout-grid-template-columns;
 
 /* #region SIZEs */
 $auto-sizes: (
