--- a/components/layout/src/vwc-layout.scss
+++ b/components/layout/src/vwc-layout.scss
@@ -10,9 +10,12 @@
 
 	@include mixins.measurement(map.keys(variables.$bases)...) using ($basis) {
 		#{functions.get-selector-with-default(".layout-column-basis", $basis, md, map.keys(variables.$bases))} {
-			grid-template-columns: repeat(
-				var(#{variables.$layout-auto-sizing}),
-				minmax(map.get(variables.$bases, $basis), 1fr)
+			grid-template-columns: var(
+				#{$vvd-layout-grid-template-columns},
+				repeat(
+					var(#{variables.$layout-auto-sizing}),
+					minmax(map.get(variables.$bases, $basis), 1fr)
+				)
 			);
 		}
 	}
