--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -1,9 +1,10 @@
 @use 'partials/vwc-calendar-variables' as calendar-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
-	$variable-name: #{calendar-variables.$calendar-shape}
-);
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with
+	(
+	$variable-name: #{calendar-variables.$calendar-shape})
+;
 
 @include shape-mixins.shape(
 	$shapes: (
@@ -18,16 +19,27 @@ ol {
 }
 
 [role="grid"i] {
-	position: relative;
 	z-index: 0;
+	position: relative;
 	display: grid;
-	margin: auto;
 	grid-template-areas:
 		'. column-headers'
 		'row-headers calendar';
 	grid-template-columns: min-content auto;
+	margin: auto;
 	inline-size: max(100%, 500px);
 	min-inline-size: 880px;
+	&::before {
+		content: "";
+		background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
+		grid-column: 1/2;
+		grid-row: 1/2;
+		position: sticky;
+		top: 0;
+		z-index: 1;
+		margin-bottom: 0.5rem;
+		display: block;
+	}
 }
 
 .row-headers {
@@ -35,10 +47,12 @@ ol {
 	grid-area: row-headers;
 	grid-template-rows: repeat(calendar-variables.$total-rows, 1fr);
 	margin-inline-end: 2px;
+
 	> [role="rowheader"i] {
 		display: flex;
 		align-items: flex-end;
 		justify-content: flex-end;
+
 		> time {
 			@include typography.typography-cat-shorthand('caption');
 			font-size: small;
@@ -53,28 +67,37 @@ ol {
 	display: grid;
 	grid-area: column-headers;
 	grid-template-columns: repeat(calendar-variables.$total-columns, 1fr);
+	position: sticky;
+	top: 0;
+	z-index: 1;
+
 	[role="columnheader"i] {
 		h2 {
+			margin: 0 0 0.5rem 0;
+			background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
+			padding: 0.25rem 0;
+		}
+
+		time {
+			display: grid;
+			grid-template-columns: 1fr auto 1fr;
+			align-items: center;
+			justify-items: center;
 			@include typography.typography-cat-shorthand('subtitle-2');
-			position: relative;
-			margin: 0;
-			text-align: center;
+
 			> em {
-				position: absolute;
 				font: inherit;
-				@supports (inset: 0) {
-					inset-inline-start: 0;
-				}
-				@supports not (inset: 0) {
-					left: 0;
-				}
+				justify-self: flex-start;
+
 			}
+
 			> small {
 				@include typography.typography-cat-shorthand('caption');
 				text-transform: uppercase;
 			}
 		}
 	}
+
 }
 
 .calendar-row {
@@ -99,12 +122,14 @@ ol {
 
 .hours {
 	display: contents;
+
 	> [role="listitem"i] {
 		position: relative;
 		grid-column: 1 / 8;
 		grid-row: var(--row);
 		min-block-size: 48px;
 		pointer-events: none;
+
 		&:not(:first-child)::after {
 			position: absolute;
 			border-block-end: var(#{scheme-variables.$vvd-color-neutral-20}) 1px solid;
@@ -124,6 +149,7 @@ ol {
 
 .columns {
 	display: contents;
+
 	> [role="gridcell"i] {
 		position: relative;
 		grid-column: var(--column);
@@ -133,6 +159,7 @@ ol {
 				--column: #{$i};
 			}
 		}
+
 		&:not(:first-child)::after {
 			position: absolute;
 			block-size: 100%;
@@ -154,6 +181,7 @@ ol {
 [role="columnheader"i],
 [role="columnheader"i] [role="button"i] {
 	position: relative;
+
 	&::before {
 		position: absolute;
 		z-index: -1;
@@ -169,9 +197,11 @@ ol {
 			left: 0;
 		}
 	}
+
 	&:focus {
 		outline: none;
 	}
+
 	&:not(:focus)::before {
 		display: none;
 	}
