--- a/components/calendar/src/vwc-calendar.scss
+++ b/components/calendar/src/vwc-calendar.scss
@@ -1,8 +1,7 @@
 @use 'partials/vwc-calendar-variables' as calendar-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 @use '@vonage/vvd-typography/scss/typography';
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with
-	(
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
 	$variable-name: #{calendar-variables.$calendar-shape})
 ;
 
@@ -19,26 +18,27 @@ ol {
 }
 
 [role="grid"i] {
-	z-index: 0;
 	position: relative;
+	z-index: 0;
 	display: grid;
+	margin: auto;
 	grid-template-areas:
 		'. column-headers'
 		'row-headers calendar';
 	grid-template-columns: min-content auto;
-	margin: auto;
 	inline-size: max(100%, 500px);
 	min-inline-size: 880px;
+
 	&::before {
-		content: "";
+		position: sticky;
+		z-index: 1;
+		top: 0;
+		display: block;
+		margin-bottom: 0.5rem;
 		background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
+		content: '';
 		grid-column: 1/2;
 		grid-row: 1/2;
-		position: sticky;
-		top: 0;
-		z-index: 1;
-		margin-bottom: 0.5rem;
-		display: block;
 	}
 }
 
@@ -47,12 +47,10 @@ ol {
 	grid-area: row-headers;
 	grid-template-rows: repeat(calendar-variables.$total-rows, 1fr);
 	margin-inline-end: 2px;
-
 	> [role="rowheader"i] {
 		display: flex;
 		align-items: flex-end;
 		justify-content: flex-end;
-
 		> time {
 			@include typography.typography-cat-shorthand('caption');
 			font-size: small;
@@ -64,26 +62,26 @@ ol {
 }
 
 .column-headers {
+	position: sticky;
+	z-index: 1;
+	top: 0;
 	display: grid;
 	grid-area: column-headers;
 	grid-template-columns: repeat(calendar-variables.$total-columns, 1fr);
-	position: sticky;
-	top: 0;
-	z-index: 1;
 
 	[role="columnheader"i] {
 		h2 {
-			margin: 0 0 0.5rem 0;
-			background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
 			padding: 0.25rem 0;
+			margin: 0 0 0.5rem;
+			background-color: var(#{scheme-variables.$vvd-color-surface-2dp});
 		}
 
 		time {
-			display: grid;
-			grid-template-columns: 1fr auto 1fr;
-			align-items: center;
-			justify-items: center;
 			@include typography.typography-cat-shorthand('subtitle-2');
+			display: grid;
+			align-items: center;
+			grid-template-columns: 1fr auto 1fr;
+			justify-items: center;
 
 			> em {
 				font: inherit;
@@ -99,7 +97,6 @@ ol {
 	}
 
 }
-
 .calendar-row {
 	display: contents;
 }
@@ -122,14 +119,12 @@ ol {
 
 .hours {
 	display: contents;
-
 	> [role="listitem"i] {
 		position: relative;
 		grid-column: 1 / 8;
 		grid-row: var(--row);
 		min-block-size: 48px;
 		pointer-events: none;
-
 		&:not(:first-child)::after {
 			position: absolute;
 			border-block-end: var(#{scheme-variables.$vvd-color-neutral-20}) 1px solid;
@@ -149,16 +144,10 @@ ol {
 
 .columns {
 	display: contents;
-
 	> [role="gridcell"i] {
 		position: relative;
 		grid-column: var(--column);
 		grid-row: 1 / #{calendar-variables.$total-rows + 1};
-		@for $i from 1 through calendar-variables.$total-columns {
-			&:nth-child(#{$i}) {
-				--column: #{$i};
-			}
-		}
 
 		&:not(:first-child)::after {
 			position: absolute;
@@ -166,6 +155,11 @@ ol {
 			border-inline-end: var(#{scheme-variables.$vvd-color-neutral-20}) 1px solid;
 			content: '';
 			margin-inline-start: -1px;
+		}
+		@for $i from 1 through calendar-variables.$total-columns {
+			&:nth-child(#{$i}) {
+				--column: #{$i};
+			}
 		}
 	}
 }
@@ -181,7 +175,6 @@ ol {
 [role="columnheader"i],
 [role="columnheader"i] [role="button"i] {
 	position: relative;
-
 	&::before {
 		position: absolute;
 		z-index: -1;
@@ -197,11 +190,9 @@ ol {
 			left: 0;
 		}
 	}
-
 	&:focus {
 		outline: none;
 	}
-
 	&:not(:focus)::before {
 		display: none;
 	}
