--- a/common/scheme/src/partials/_scheme-variables.scss
+++ b/common/scheme/src/partials/_scheme-variables.scss
@@ -2,5 +2,5 @@ $scheme-main: vvd-scheme-main;
 $scheme-alternate: vvd-scheme-alternate;
 
 
-$scheme-main-selector: 'body, .#{$scheme-main}, ::part(#{$scheme-main})';
+$scheme-main-selector: ':root, .#{$scheme-main}, ::part(#{$scheme-main})';
 $scheme-alternate-selector: '.#{$scheme-alternate}, ::part(#{$scheme-alternate})';
