fix(text): tight option (#1110)
* fix(text): tight option

* Move login example to pages

* formas sass file

* Update components/text/src/vwc-text-base.ts

* Update components/text/readme.md

Co-authored-by: yinon <yinon@hotmail.com>

* Update components/text/src/vwc-text-base.ts

Co-authored-by: yinon <yinon@hotmail.com>

* Update components/text/readme.md

Co-authored-by: yinon <yinon@hotmail.com>

--- a/components/text/src/vwc-text.scss
+++ b/components/text/src/vwc-text.scss
@@ -40,9 +40,11 @@
 		}
 	}
 
-	&:where(.font-face-headline-1, .font-face-headline-2, .font-face-title-1, .font-face-title-2, .font-face-subtitle-1, .font-face-subtitle-2, .font-face-body-1, .font-face-body-2) {
-		display: block;
-		margin: var(--font-face-margin, 0);
+	&:not(.tight) {
+		&:where(.font-face-headline-1, .font-face-headline-2, .font-face-title-1, .font-face-title-2, .font-face-subtitle-1, .font-face-subtitle-2, .font-face-body-1, .font-face-body-2) {
+			display: block;
+			margin: var(--font-face-margin, 0);
+		}
 	}
 }
 
