viv-753-card-ellipsis #comment: revert vwc-text back to div

--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -32,6 +32,7 @@
 	}
 
 	&-title {
+		@include typography.typography-cat-shorthand('subtitle-2');
 		margin-bottom: 4px;
 		-webkit-line-clamp: var(--title-line-trim);
 	}
