--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -1,3 +1,4 @@
+@use 'partials/vwc-card-variables' as card-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 
@@ -34,11 +35,11 @@
 	&-title {
 		@include typography.typography-cat-shorthand('subtitle-2');
 		margin-bottom: 4px;
-		-webkit-line-clamp: var(--title-line-trim);
+		-webkit-line-clamp: var(#{card-variables.$title-line-clamp});
 	}
 
 	&-subtitle {
-		-webkit-line-clamp: var(--subtitle-line-trim);
+		-webkit-line-clamp: var(#{card-variables.$subtitle-line-clamp});
 	}
 
 	&-subtitle,
