--- a/components/tooltip/src/vwc-tooltip.scss
+++ b/components/tooltip/src/vwc-tooltip.scss
@@ -10,7 +10,7 @@
 	background-color: var(#{scheme-variables.$vvd-color-canvas});
 	border-radius: 6px;
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
-	grid-template-columns: minmax(calc(var(#{tooltip-variables.$tooltip-width}, 150px) - 32px), 1fr) auto;
+	grid-template-columns: minmax(calc(var(#{tooltip-variables.$tooltip-width}, 150px) - 36px), 1fr) auto;
 
 	&.open {
 		display: grid;
@@ -27,7 +27,7 @@
 
 	.dismiss-button {
 		align-self: flex-start;
-		margin: 0.125rem 0;
+		margin: 0.125rem;
 	}
 }
 
