viv-771-card-action-slot #comment change slot name

--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -92,6 +92,12 @@ header {
 	height: 20px;
 }
 
+::slotted([slot="actionItem"i]) {
+	> * {
+		flex-shrink: 0;
+	}
+}
+
 .no-content {
 	display: none;
 }
