fix(select): unneeded top padding

--- a/components/select/src/vwc-select.scss
+++ b/components/select/src/vwc-select.scss
@@ -101,9 +101,11 @@ $vvd-select-size-block: --vvd-select-size-block;
 	}
 }
 
-:host([dense]) {
+:host([dense][label]:not([label=''])) {
 	padding-top: 24px;
+}
 
+:host([dense]) {
 	.mdc-select__selected-text {
 		padding: 0;
 	}
@@ -115,6 +117,12 @@ $vvd-select-size-block: --vvd-select-size-block;
 			top: -24px;
 			left: -12px;
 			transform: none;
+			//&::before {
+			//	content: "";
+			//	display: block;
+			//	padding-top: 24px;
+			//	width: 100%;
+			//}
 		}
 	}
 	#{$vvd-select-size-block}: 40px;
