--- a/components/tooltip/src/vwc-tooltip.scss
+++ b/components/tooltip/src/vwc-tooltip.scss
@@ -19,10 +19,10 @@
 	&-content {
 		display: flex;
 		flex-direction: column;
-		padding: 0.5rem 0 0.5rem 0.75rem;
+		padding: 0.5rem 0.75rem;
 
-		:host([dismissible='false']) & {
-			padding-right: 0.75rem;
+		:host([dismissible]) & {
+			padding-right: 0;
 		}
 	}
 	&-text {
