min and max inline-size tooltip width

--- a/components/tooltip/src/partials/_vwc-tooltip-variables.scss
+++ b/components/tooltip/src/partials/_vwc-tooltip-variables.scss
@@ -1,2 +1,3 @@
 //sizes variables
-$tooltip-width: --tooltip-width;
+$tooltip-min-inline-size: --tooltip-min-inline-size;
+$tooltip-max-inline-size: --tooltip-max-inline-size;
