class name change

--- a/components/button-toggle-group/src/vwc-button-toggle-group.scss
+++ b/components/button-toggle-group/src/vwc-button-toggle-group.scss
@@ -30,7 +30,7 @@ $sizes: (
 	--mdc-ripple-focus-opacity: 0;
 }
 
-.button-group {
+.button-toggle-group {
 	display: inline-flex;
 	align-items: center;
 	padding: 3px 2px;
