--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -14,6 +14,10 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 	block-size: 100vh;
 }
 
+:host([side='right']) {
+	flex-direction: row-reverse;
+}
+
 .side-drawer {
 	position: fixed;
 	z-index: var(#{variables.$side-drawer-z-index}, #{$z-index-default});
@@ -32,9 +36,14 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 
 	&.side-drawer--modal,
 	&.side-drawer--dismissible {
-
+		transform: translateX(0%);
 		&:not(.side-drawer--open) {
-			transform: translateX(-100%);
+			&.side-drawer--right {
+				transform: translateX(100%);
+			}
+			&.side-drawer--left {
+				transform: translateX(-100%);
+			}
 		}
 		@media (prefers-reduced-motion: no-preference) {
 			transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
@@ -46,6 +55,10 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 		+ .side-drawer--app-content {
 			@include typography.typography-cat-shorthand(body-1);
 			margin-inline-start: #{$inline-size};
+			&.side-drawer--right {
+				margin-inline-end: var(--side-drawer-inline-size, 280px);
+				margin-inline-start: 0;
+			}
 			::slotted(vwc-top-app-bar),
 			::slotted(vwc-top-app-bar-fixed) {
 				--mdc-top-app-bar-width: calc(100% - #{$inline-size});
@@ -79,6 +92,10 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 	right: initial;
 	bottom: 0;
 	left: 0;
+	&.side-drawer--right {
+		right: 0;
+		left: initial;
+	}
 }
 
 .side-drawer--scrim {
