--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -14,6 +14,10 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 	block-size: 100vh;
 }
 
+:host([position='end']) {
+	flex-direction: row-reverse;
+}
+
 .side-drawer {
 	position: fixed;
 	z-index: var(#{variables.$side-drawer-z-index}, #{$z-index-default});
@@ -26,24 +30,29 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 	color: var(#{variables.$side-drawer-color}, var(#{scheme-variables.$vvd-color-on-canvas}));
 	inline-size: #{$inline-size};
 
-	&.side-drawer--alternate {
+	&.side-drawer-alternate {
 		background-color: var(#{scheme-variables.$vvd-color-canvas});
 	}
 
-	&.side-drawer--modal,
-	&.side-drawer--dismissible {
-
-		&:not(.side-drawer--open) {
-			transform: translateX(-100%);
+	&.side-drawer-modal,
+	&.side-drawer-dismissible {
+		transform: translateX(0%);
+		&:not(.side-drawer-open) {
+			&.side-drawer-end {
+				transform: translateX(100%);
+			}
+			&:not(.side-drawer-end) {
+				transform: translateX(-100%);
+			}
 		}
 		@media (prefers-reduced-motion: no-preference) {
 			transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 		}
 	}
 
-	&.side-drawer--dismissible.side-drawer--open,
-	&:not(.side-drawer--dismissible):not(.side-drawer--modal) {
-		+ .side-drawer--app-content {
+	&.side-drawer-dismissible.side-drawer-open,
+	&:not(.side-drawer-dismissible):not(.side-drawer-modal) {
+		+ .side-drawer-app-content {
 			@include typography.typography-cat-shorthand(body-1);
 			margin-inline-start: #{$inline-size};
 			::slotted(vwc-top-app-bar),
@@ -51,10 +60,16 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 				--mdc-top-app-bar-width: calc(100% - #{$inline-size});
 			}
 		}
+		&.side-drawer-end {
+			+ .side-drawer-app-content {
+				margin-inline-end: var(--side-drawer-inline-size, 280px);
+				margin-inline-start: 0;
+			}
+		}
 	}
 }
 
-.side-drawer--top-bar {
+.side-drawer-top-bar {
 	$gutter: var(#{variables.$side-drawer-padding-top-bar}, #{$padding-default});
 	@include typography.typography-cat-shorthand(subtitle-1);
 	display: flex;
@@ -65,7 +80,7 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 	padding-inline-start: #{$gutter};
 }
 
-.side-drawer--content {
+.side-drawer-content {
 	$gutter: var(#{variables.$side-drawer-padding-body}, #{$padding-default});
 	background-color: inherit;
 	overflow-y: auto;
@@ -73,15 +88,19 @@ $inline-size: var(#{variables.$side-drawer-inline-size}, 280px);
 	padding-inline-start: #{$gutter};
 }
 
-.side-drawer--modal {
+.side-drawer-modal {
 	position: fixed;
 	top: 0;
-	right: initial;
 	bottom: 0;
-	left: 0;
+	&:not(.side-drawer-end) {
+		inset-inline-start: 0;
+	}
+	&.side-drawer-end {
+		inset-inline-end: 0;
+	}
 }
 
-.side-drawer--scrim {
+.side-drawer-scrim {
 	@include scrim-mixins.scrim-variables;
 	position: fixed;
 	z-index: calc(#{$z-index-default} - 1);
