--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -64,7 +64,7 @@
 		padding-right: 0.5rem;
 	}
 
-	&-actions {
+	&-footer {
 		display: inline-flex;
 		flex-direction: column;
 		align-items: flex-end;
